Fix entity registration, animation binding, and block collisions